# purejaxrl

./: .gitignore  config.json  pyproject.toml  requirements.txt  requirements_cc.txt  test.py  test2.py  test3.py  test4.py  test5.py
analysis/scripts/: test.py
archived/: dqn_multitask.py  registration_old.py  rooms_multitask.py
archived/configs/: fta.json  test.json  test2.json
archived/gui/: run_visualization.sh  visualize_reps.py
clusters/: fir.json  vulcan.json
experiments/tests/: collect.json  collect_empty.json  collect_keymaze.json  collect_maze.json  collect_tworooms.json  collect_tworooms_paper.json  david_collect_2key.json  david_example_1key.json  david_example_2key.json  david_options_2key.json  empty_binary.json  empty_binary_new.json  empty_binary_new_no_l2.json  empty_binary_sparse.json  empty_binary_sparse_no_l2.json  empty_binary_twokey.json  empty_binary_twokey_new_plots.json  empty_binary_twokey_new_plots_high_l2.json  empty_binary_twokey_sparse.json  empty_binary_twokey_sparse_new_plots.json  empty_binary_twokey_sparse_new_plots_high_l2.json  empty_relu.json  keymaze_fta.json  keymaze_relu.json  maze_fta.json  maze_relu.json  maze_relu2.json  maze_relu3 copy.json  navix_relu.json  options_empty_last_hidden_relu_test.json  (+26 more)
purejaxrl/: dqn_multitask copy.py  dqn_multitask.py  dqn_rooms.py  fta.py  wrappers.py
scripts/: local.py  local_node_venv.sh  local_vec.py  schedule.py  setup_cc.sh  slurm.py  util.py
src/: b_tcvae.py  collect.py  dqn.py  options.py  options_rrfa.py  wrappers.py
tests/: test_fta.py  test_gridworld.py  test_maze.py
(+95 files in other folders)
